# PonteTech-Desafio

./: .gitignore  DESAFIO_SIMPLIFICADO.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202511141200_init.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  dashboard.py  tasks.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  task.py  user.py
backend/app/seeds/: seed_data.py
backend/app/services/: auth_service.py  task_service.py  user_service.py
backend/app/utils/: validators.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_auth.py  test_tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: DashboardSummary.tsx  LoginPanel.tsx  TaskBoard.tsx
frontend/src/constants/: status.ts
frontend/src/hooks/: useApi.ts
